<resources >
    <string name="app_name">ShaveUpApp</string>
    <string name="app_logo">ShaveUp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language">ES</string>
    <string name="Email">Correo</string>
    <string name="Password">Contraseña</string>
    <string name="ForgotPassword">¿Olvidaste tu contraseña?</string>
    <string name="Login">Iniciar sesión</string>
    <string name="new_account">¿No tienes una cuenta? Créate una aquí</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="create_account">Creación de usuario</string>
    <string name="client">Cliente</string>
    <string name="type_user">¿Qué tipo de usuario eres?</string>
    <string name="barber">Barbero</string>
    <string name="customer_user">Usuario Cliente</string>
    <string name="login_details">Información de Inicio de sesión</string>
    <string name="first_Name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="choose_profile">Elegir foto de perfil</string>
    <string name="register_user">Registrar usuario</string>
    <string name="user_details">Información de Cliente</string>
    <string name="email_sent_success">Correo enviado</string>
    <string name="email_sent_error">Ocurrió un error :(</string>
    <string name="invalid_email">Correo Invalido</string>
    <string name="email_password_empty">El email y la contraseña no pueden estar vacíos</string>
    <string name="no_type_user">Tipo de usuario no definido</string>
    <string name="no_user_data">Error al obtener datos del usuario</string>
    <string name="no_registered">Usuario no registrado :c</string>
    <string name="error_retrieve_user_id">Error al obtener el ID del usuario</string>
    <string name="error_create_user">Error al crear el usuario :c</string>
    <string name="errors_exist">Existen errores</string>
    <string name="field_required">Este campo es obligatorio</string>
    <string name="password_not_empty">La contraseña no puede estar vacía</string>
    <string name="password_min_length">La contraseña debe tener al menos 6 caracteres</string>
    <string name="invalid_characters">Hay caracteres no permitidos</string>
    <string name="failed">Falló</string>
    <string name="user_created_success">Usuario creado correctamente</string>
    <string name="error_saving_user">Ocurrió un error al guardar el usuario</string>
    <string name="user_barber">Usuario Barbero</string>
    <string name="personal_information">Información personal</string>
    <string name="nickname">Apodo</string>
    <string name="phone">Teléfono</string>
    <string name="where_do_you_work">Dónde trabajas</string>
    <string name="barbershop_name">Nombre de la barbería</string>
    <string name="address">Dirección</string>
    <string name="district">Distrito</string>
    <string name="must_select_option">Tiene que seleccionar una opción</string>
    <string name="settings">Configuración</string>
    <string name="edit_information">Editar información</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit_barber">Editar Barbero</string>
    <string name="update">Actualizar</string>
    <string name="comments">Comentarios</string>
    <string name="bookings">Reservas</string>
    <string name="proposed_bookings">Reservas Propuestas</string>
    <string name="accepted_bookings">Reservas aceptadas</string>
    <string name="cancelled_bookings">Reservas canceladas</string>
    <string name="finished_bookings">Reservas terminadas</string>
    <string name="you">Tú</string>
    <string name="reviews">Opiniones</string>
    <string name="appointments">Citas</string>
    <string name="orders">Pedidos</string>
    <string name="requested_orders">Pedidos solicitados</string>
    <string name="accepted_orders">Pedidos aceptados</string>
    <string name="cancelled_orders">Pedidos cancelados</string>
    <string name="orders_ready">Pedidos listos para entrega</string>
    <string name="delivered_orders">Pedidos entregados</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="my_profile">Mi perfil</string>
    <string name="contact_information">Información de contacto</string>
    <string name="services">Servicios</string>
    <string name="add_service">Agregar servicio</string>
    <string name="photos">Fotos</string>
    <string name="add_photo">Agregar foto</string>
    <string name="products">Productos</string>
    <string name="new_service">Nuevo Servicio</string>
    <string name="service_name">Nombre del servicio</string>
    <string name="service_description">Descripción del servicio</string>
    <string name="service_price">Precio del servicio</string>
    <string name="register_service">Registrar servicio</string>
    <string name="invalid_price_format">Formato de precio no válido</string>
    <string name="something_went_wrong">Algo salió mal :(</string>
    <string name="service_created">Servicio Creado</string>
    <string name="new_product">Nuevo Producto</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_description">Descripción del producto</string>
    <string name="product_price">Precio del producto</string>
    <string name="max_order_quantity">Máxima cantidad pedida</string>
    <string name="choose_product_photo">Elegir foto del producto</string>
    <string name="add_product">Agregar producto</string>
    <string name="upload_photo_required">Es obligatorio subir una foto.</string>
    <string name="data_updated_success">Datos actualizados correctamente</string>
    <string name="error_update_data">Error al actualizar los datos:</string>
    <string name="select_option">Tiene que seleccionar una opción</string>
    <string name="product_label">Producto: </string>
    <string name="quantity_label">Cantidad: </string>
    <string name="total_label">Total: </string>
    <string name="date_label">Fecha: </string>
    <string name="comment_no_photo">Este comentario no posee foto</string>
    <string name="reservation_status_updated">Estado de la reserva actualizado</string>
    <string name="error_update_status">Error al actualizar el estado</string>
    <string name="attention">Atención</string>
    <string name="select_action">Selecciona la acción que desear realizar</string>
    <string name="document_updated_success">Documento actualizado y campo nuevo agregado con éxito</string>
    <string name="error_update_document">Error actualizando el documento</string>
    <string name="ready_for_pickup">Listo para recoger</string>
    <string name="finish_service">Terminar servicio</string>
    <string name="make_comment">Hacer Comentario</string>
    <string name="product_created">Producto Creado</string>
    <string name="only_positive_integers">Solo se permiten números enteros mayores a 0</string>
    <string name="edit_service">Editar servicio</string>
    <string name="delete">Eliminar</string>
    <string name="service_deleted_success">El servicio ha sido borrado con éxito</string>
    <string name="error_delete_service">Error eliminar servicio</string>
    <string name="view_photo">Ver foto</string>
    <string name="photo_deleted_success">La foto ha sido borrada con éxito</string>
    <string name="edit_product_info">Editar información del producto</string>
    <string name="product_deleted_success">El producto ha sido borrado con éxito</string>
    <string name="photo_uploaded">Foto subida</string>
    <string name="error_writing_document">Error al escribir el documento: </string>
    <string name="register_new_service_info">Registrar nueva información del servicio</string>
    <string name="modify_product">Modificar producto</string>
    <string name="search">Búsqueda</string>
    <string name="edit_client">Editar cliente</string>
    <string name="create_comment">Crear Comentario</string>
    <string name="comment">Comentario</string>
    <string name="choose_review_photo">Elegir foto de reseña</string>
    <string name="register_comment">Registrar comentario</string>
    <string name="search_hint">Buscar...</string>
    <string name="barbershop">Barbería</string>
    <string name="location">Locación</string>
    <!--Cliente-->
    <string name="like">Me gusta</string>
    <string name="no_like">No me gusta</string>
    <string name="reserve">Reservar</string>
    <string name="contact_info">Información de contacto</string>
    <string name="selected_product">Producto seleccionado</string>
    <string name="quantity_buy">Cantidad a comprar</string>
    <string name="buy_product">Comprar producto</string>
    <string name="max_quantity_order">Máxima cantidad pedida</string>
    <string name="product_photo">Elegir foto del producto</string>
    <string name="select_date">Seleccionar fecha</string>
    <string name="date">Fecha</string>
    <string name="select_time">Seleccionar hora</string>
    <string name="hour">Hora</string>
    <string name="nav_you">Tú</string>
    <string name="nav_orders">Pedidos</string>
    <string name="nav_search">Búsqueda</string>
    <string name="nav_quotes">Citas</string>
    <string name="nav_settings">Config</string>
    <string name="choose_review">Elegir foto de reseña</string>
    <string name="login_info">Información de inicio de sesión</string>
    <string name="update_info">Actualizar</string>
    <string name="search_bar">Buscar...</string>
    <string name="location_filter">Locación</string>
    <string name="service_filter">Servicio</string>
    <string name="reservations">Reservas</string>
    <string name="proposed_reservations">Reservas propuestas</string>
    <string name="reservations_accepted">Reservas aceptadas</string>
    <string name="canceled_reservations">Reservas canceladas</string>
    <string name="reservations_ended">Reservas terminadas</string>
    <string name="setting">Configuración</string>
    <string name="edit_info">Editar información</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="orders_accepted">Pedidos aceptados</string>
    <string name="canceled_orders">Pedidos cancelados</string>
    <string name="orders_delivered">Pedidos entregados</string>
    <string name="profile_client">Mi perfil</string>
    <string name="favorite_barber">Favorito(s)</string>
    <string name="order_name">Producto:</string>
    <string name="order_amount">Cantidad:</string>
    <string name="order_total">Total:</string>
    <string name="order_date">Fecha:</string>
    <string name="fields_empty">Existen campos vacíos</string>
    <string name="comment_created">Comentario creado</string>
    <string name="write_comment_hint">Escriba un comentario</string>
    <string name="error_delete_photo">Error eliminar foto</string>
    <string name="barber_removed_from_favorites">Barbero eliminado de Favoritos</string>
    <string name="barber_added_to_favorites">Barbero agregado a Favoritos</string>
    <string name="error_delete_document">Error al eliminar el documento</string>
    <string name="error_search_document">Error al buscar documento</string>
    <string name="enter_positive_integer">Ingrese un valor natural mayor a 0</string>
    <string name="invalid_max_value">El valor máximo permitido no es válido</string>
    <string name="value_cannot_be_greater_than">El valor no puede ser mayor que</string>
    <string name="order_created">Pedido creado</string>
    <string name="invalid_time">Esta hora no está permitida</string>
    <string name="reservation_created">Reserva creada</string>
    <string name="error_process_date_time">Error al procesar la fecha y hora:</string>






















</resources>