<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuClienteProfileFragment"
        android:enabled="true"
        android:icon="@drawable/iconuser"
        android:title="@string/nav_you" />
    <item
        android:id="@+id/menuClientePedidosFragment"
        android:enabled="true"
        android:icon="@drawable/iconbag"
        android:title="@string/nav_orders" />
    <item
        android:id="@+id/menuClienteBusquedaFragment"
        android:enabled="true"
        android:icon="@drawable/iconsearch"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/menuClienteCitasFragment"
        android:enabled="true"
        android:icon="@drawable/iconcita"
        android:title="@string/nav_quotes" />
    <item
        android:id="@+id/menuClienteConfigFragment"
        android:enabled="true"
        android:icon="@drawable/iconconfig"
        android:title="@string/nav_settings" />
</menu>